package bco.bookingcar.car;

public class CarNotFoundException extends Exception {
}
