package bco.bookingcar.customer;

public class CustomerNotFoundException extends Exception {
}
